# music-player

./: .gitignore  README.md  bun.lockb  package.json  svelte.config.js  tsconfig.json  vite.config.js
src/: Shortcut.js  app.html  service.ts  shortcut.js  theme.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  player.rs  playlist.rs  song.rs
src-tauri/src/player/: song.rs
src/lib/components/: MiniPlayer.svelte  Navigation.svelte  Shortcuts.svelte
src/lib/components/ui/carousel/: index.ts
src/lib/components/ui/progress/: progress.svelte
src/lib/components/ui/slider/: slider.svelte
src/routes/: +page.svelte
src/routes/player/: +page.svelte
