[package]
name = "mus-player"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mus_player_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0.0"
rodio = { version = "0.19.0", features= ["symphonia-isomp4", "symphonia-aac"] }
symphonia = { version = "0.5.4", default-features = false }
lazy_static = "1.5.0"
tokio = "1.39.3"
walkdir = "2.5.0"
lofty = "0.21.0"
tauri-plugin-fs = "2.0.0-rc.0"
